# vic-suburbs-dwh

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  databricks.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
bootstrap/: 00_catalog_schema.sql  10_grants.sql  99_teardown.sql  bootstrap_uc.py
config/: entities.yaml
config/dq_rules/: crime.yaml  demographics.yaml  education.yaml  property.yaml  transport.yaml
config/pipeline/: dev.yaml  prod.yaml  qa.yaml
config/schemas/: crime.yaml  demographics.yaml  education.yaml  lga_ref.yaml  property.yaml  suburb_ref.yaml  transport.yaml
config/sources/: crime.yaml  demographics.yaml  education.yaml  lga_ref.yaml  property.yaml  suburb_ref.yaml  transport.yaml
config/synthetic/: mutation_rules.yaml  seed_config.yaml  suburb_seed.csv
deployment/: bootstrap.sh  destroy.sh
docs/data-model/: data-dictionary.md  data-model.md
docs/design/: 00-overview-and-architecture.md  01-scd2-strategy.md  02-incremental-loading-strategy.md  03-data-sourcing-and-synthetic-universe.md  04-pipeline-pattern.md  05-data-quality-spec.md  06-observability-and-lineage-spec.md  07-deployment-and-rbac-spec.md
docs/runbooks/: data-sources.md  deployment-guide.md  intellij-wsl-setup.md  local-development.md  operations.md  repository-tour.md
operations/: diagnose_fact_joins.sh  diagnose_silver.sh  verify_pipeline.sh
resources/dashboards/: vic_suburbs.dashboard.yml  vic_suburbs.lvdash.json
resources/jobs/: vic_suburbs.job.yml  vic_suburbs_bootstrap.job.yml
resources/pipelines/: vic_suburbs.pipeline.yml
src/vic_suburbs/common/: config.py  dq.py  lineage.py  runlog.py  transforms.py
tests/: conftest.py
tests/integration/: test_pipeline_smoke.py
tests/unit/: test_config.py  test_dq.py  test_generator.py  test_lineage.py  test_run_extract.py  test_runlog.py  test_transforms.py
tools/: build-er-diagram.py  build_dashboard.py  dbsql.sh  tools-README.md
(+11 files in other folders)
