[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vic-suburbs-dwh"
version = "0.1.0"
description = "Victoria Suburbs Profiler — a Databricks Lakehouse POC"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
  "integration: requires a Spark session (skipped when unavailable)",
]
pythonpath = ["src"]

[tool.coverage.run]
source = ["vic_suburbs"]
# DLT-decorated pipeline code and Databricks notebook entry scripts require a live
# Spark/DLT/dbutils runtime; they are validated by the live pipeline run and the integration
# smoke test (tests/integration), not by unit tests. The unit-coverage gate below therefore
# measures the pure, runtime-independent logic, which is held at 100%.
omit = [
  "*/vic_suburbs/pipeline/*",
  "*/vic_suburbs/orchestration/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_also = [
  "if __name__ == .__main__.:",
  "\\.\\.\\.",
]
